--- a/.github/workflows/main_as-tad-dev(asp-tad-dev).yml
+++ b/.github/workflows/main_as-tad-dev(asp-tad-dev).yml
@@ -6,7 +6,7 @@ name: Build and deploy ASP.Net Core app to Azure Web App - as-tad-dev
 on:
   push:
     branches:
-      - main
+      - stage
   workflow_dispatch:
 
 jobs:
