--- a/.github/workflows/stage_contoso-development.yml
+++ b/.github/workflows/stage_contoso-development.yml
@@ -13,6 +13,10 @@ jobs:
   build:
     runs-on: windows-latest
 
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
@@ -33,8 +37,8 @@ jobs:
           name: .net-app
           path: ${{env.DOTNET_ROOT}}/myapp
 
-  deploy:
-    runs-on: windows-latest
+   deploy:
+    runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
